# inhale

./: .gitignore  CLAUDE.md  LICENSE  docker-compose.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
.claude/: settings.json  settings.local.json
.claude/plans/: staged-drifting-crab.md
apps/web/: .env.example  .env.local.example  .gitattributes  .gitignore  README.md  docker-compose.yml  empty-module.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
docs/: migrations.md
drizzle/: 0000_goofy_spencer_smythe.sql  0001_aromatic_junta.sql  0003_powerful_lady_bullseye.sql  0004_drop_user_comments.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  (+1 more)
e2e/: ai-features.spec.ts  api-security.spec.ts  auth.spec.ts  chat-history.spec.ts  highlights-render.spec.ts  highlights.spec.ts  reader.spec.ts  settings.spec.ts
services/agents/: main.py  pyproject.toml
services/agents/lib/: auto_highlight_tools.py  chat.py  conversations.py  models.py  openrouter_client.py  pdf_text.py  rag.py
services/agents/routers/: auto_highlight.py  auto_highlight_rebuild.py  chandra_segments.py  chat.py  embeddings.py  health.py  outline.py
services/agents/tests/: conftest.py  test_auth.py  test_auto_highlight_rebuild.py  test_auto_highlight_rects.py  test_auto_highlight_route.py  test_auto_highlight_tools.py  test_chandra_segments.py  test_chat_contract.py  test_chat_run.py  test_conversations.py  test_embeddings.py  test_health.py  test_outline.py  test_rag.py
src/: proxy.ts
(+264 files in other folders)
